update formulario, corpo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
                         Descontos!!!
                     </p>
 
-                    <form action="login.php" method="post"></form>
+                    <form action="login.php" method="post">
+
+
+                        
+                    </form>
 
 
 
