--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Login</title>
 
 <link rel="stylesheet" href="estilos/style.css">
+<link rel="shortcut icon" href="imagens/Bingxueling-Fruit-Vegetables-Pumpkin.ico" type="image/x-icon">
 
 
 
@@ -34,7 +35,7 @@
 
             <h1>Login</h1>
 
-            <p>Seja bem vindo(a) novamente! Nada melhor que aproveitar a melhor epoca do Ano com super
+            <p>Seja bem vindo(a) novamente! Vamos aproveitar a melhor epoca do Ano com super
                 Descontos!!!
             </p>
 
