--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Login</title>
 
 <link rel="stylesheet" href="estilos/style.css">
+<link rel="stylesheet" href="estilos/mediaquery.css">
 <link rel="shortcut icon" href="imagens/Bingxueling-Fruit-Vegetables-Pumpkin.ico" type="image/x-icon">
 
 
