--- a/index.html
+++ b/index.html
@@ -34,13 +34,33 @@
 
         <div id="formulario">
 
-            <h1>Login</h1>
+            <h1>Bom ter você Aqui Novamente!</h1>
 
-            <p>Seja bem vindo(a) novamente! Vamos aproveitar a melhor epoca do Ano com super
+            <p>Seja bem vindo(a)! Vamos aproveitar a melhor epoca do Ano com super
                 Descontos!!!
             </p>
 
             <form action="login.php" method="post">
+
+                <div class="inputgroup">
+
+                            <label for="clogin">Login:</label>
+                            <input type="text" id="clogin" placeholder="Login criado" required>
+                </div>
+
+                <div class="inputgroup w50">
+
+                    <label for="csenha">Senha:</label>
+                    <input type="password" id="csenha" placeholder="Sua Senha" required>
+
+
+        </div>
+
+        
+        <div class="inputgroup">
+
+            <button>Fazer Login</button>
+</div>
 
 
                 
